--- a/MediSecurity/Views/Shared/_Layout.cshtml
+++ b/MediSecurity/Views/Shared/_Layout.cshtml
@@ -33,6 +33,8 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Hospitals" asp-action="Index">Hospital</a></li>
+                    <li><a asp-area="" asp-controller="Patients" asp-action="Index">Patient</a></li>
                 </ul>
             </div>
         </div>
