--- a/MediSecurity/Views/Shared/_Layout.cshtml
+++ b/MediSecurity/Views/Shared/_Layout.cshtml
@@ -30,10 +30,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Hospitals" asp-action="Index">Hospital</a></li>
+                    <li><a asp-area="" asp-controller="HospitalTypes" asp-action="Index">HospitalType</a></li>
                     <li><a asp-area="" asp-controller="Patients" asp-action="Index">Patient</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
