--- a/MediSecurity/Views/Shared/_Layout.cshtml
+++ b/MediSecurity/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Hospitals" asp-action="Index">Hospital</a></li>
                     <li><a asp-area="" asp-controller="HospitalTypes" asp-action="Index">HospitalType</a></li>
+                    <li><a asp-area="" asp-controller="Doctors" asp-action="Index">Doctor</a></li>
                     <li><a asp-area="" asp-controller="Patients" asp-action="Index">Patient</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
