--- a/MediSecurity/Views/Patients/Index.cshtml
+++ b/MediSecurity/Views/Patients/Index.cshtml
@@ -29,6 +29,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.User.PhoneNumber)
             </th>
+            <th>
+                Medical Orders
+            </th>
 
         </tr>
     </thead>
@@ -52,6 +55,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.User.PhoneNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.MedicalOrders.Count)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">Edit</a> |
