--- a/MediSecurity/Views/Home/Index.cshtml
+++ b/MediSecurity/Views/Home/Index.cshtml
@@ -3,44 +3,61 @@
 }
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+        <li data-target="#myCarousel" data-slide-to="4"></li>
+        <li data-target="#myCarousel" data-slide-to="5"></li>
+        <li data-target="#myCarousel" data-slide-to="6"></li>
+        <li data-target="#myCarousel" data-slide-to="7"></li>
+        <li data-target="#myCarousel" data-slide-to="8"></li>
+        <li data-target="#myCarousel" data-slide-to="9"></li>
+        <li data-target="#myCarousel" data-slide-to="10"></li>
+        <li data-target="#myCarousel" data-slide-to="11"></li>
+        <li data-target="#myCarousel" data-slide-to="12"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
+            <img src="~/images/Home/Banner_1.png" class="img-responsive" />
         </div>
         <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
+            <img src="~/images/Home/Banner_2.png" class="img-responsive" />
         </div>
         <div class="item">
-            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
+            <img src="~/images/Home/Banner_3.png" class="img-responsive" />
+        </div>
+        <div class="item">
+            <img src="~/images/Home/Banner_5.png" class="img-responsive" />
+        </div>
+        <div class="item">
+            <img src="~/images/Home/Banner_6.png" class="img-responsive" />
+        </div>
+        <div class="item">
+            <img src="~/images/Home/Banner_7.png" class="img-responsive" />
+        </div>
+        <div class="item">
+            <img src="~/images/Home/Banner_8.png" class="img-responsive" />
+        </div>
+        <div class="item">
+            <img src="~/images/Home/Banner_9.png" class="img-responsive" />
+        </div>
+        <div class="item">
+            <img src="~/images/Home/Banner_10.png" class="img-responsive" />
+        </div>
+        <div class="item">
+            <img src="~/images/Home/Banner_11.png" class="img-responsive" />
+        </div>
+        <div class="item">
+            <img src="~/images/Home/Banner_12.png" class="img-responsive" />
+        </div>
+        <div class="item">
+            <img src="~/images/Home/Banner_13.png" class="img-responsive" />
+        </div>
+        <div class="item">
+            <img src="~/images/Home/Banner_14.png" class="img-responsive" />
         </div>
     </div>
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
@@ -52,6 +69,25 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+
+<hr />
+<div class="row">
+
+    @if (User.IsInRole("Doctor") || User.IsInRole("Admin"))
+    {
+        <div class="col-md-2">
+            <a asp-action="Patients" class="btn btn-success">Patients</a>
+        </div>
+    }
+    @if (User.IsInRole("Patient"))
+    {
+        <div class="col-md-2">
+            <a asp-action="Hospital" class="btn btn-success">Hospital</a>
+        </div>
+    }
+</div>
+
+<hr />
 
 <div class="row">
     <div class="col-md-3">
